--- a/app/views/bikes/search.html.erb
+++ b/app/views/bikes/search.html.erb
@@ -1,3 +1,11 @@
 <div class="cointainer">
   <p>Vous voulez un vélo à <%= @place %></p>
 </div>
+
+<ul>
+  <% @bikes.each do |bike| %>
+    <%= link_to new_bike_rental_path(bike) do %>
+      <li><%= bike.name %></li>
+    <% end %>
+  <% end %>
+</ul>
